[package]
name = "rapd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.3"
serde_json = "1.0.87"
serde = { version = "1.0", features = ["derive"] }
flume = "0.10.14"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
symphonia = { version = "0.5.1", features = [ "aac", "alac", "mp3", "isomp4" ] }
lofty = "0.8.1"

[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = "2.5.0"
libpulse-simple-binding = "2.5.0"

[target.'cfg(not(target_os = "linux"))'.dependencies]
cpal = "0.13.3"
rb = "0.3.2"
