[package]
name = "rapd"
version = "2.0.0"
edition = "2021"

[dependencies]
log = "0.4"
pretty_env_logger = "0.3"
serde_json = "1.0.87"
serde = { version = "1.0", features = ["derive"] }
flume = "0.10.14"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
symphonia = { version = "0.5.1", features = [ "aac", "alac", "mp3", "isomp4" ] }
lofty = "0.8.1"
xdg = "2.4.1"
uuid = { version = "1.2.1", features = ["v4", "fast-rng"] }
notify-rust = { version = "4.5.10", features = ["image"] }
subprocess = "0.2.9"

[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = "2.5.0"
libpulse-simple-binding = "2.5.0"

[target.'cfg(not(target_os = "linux"))'.dependencies]
cpal = "0.13.3"
rb = "0.3.2"
