[package]
name = "rapc"
version = "0.1.0"
authors = ["Interfiber <webmaster@interfiber.dev>"]
description = "The Rust Audio Player Client"
readme = "README.md"
homepage = "https://rapd.readthedocs.io/en/latest/"
repository = "https://github.com/Interfiber/rapd/tree/main/rapc/"
license = "GPL-3.0"
keywords = ["audio", "cli", "daemon"]
categories = ["command-line-utilities", "multimedia::audio"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Command line parsing
clap = "3.0.14"
# Parsing server results
serde_json = "1.0.78"
# user input
text_io = "0.1.9"
