[package]
name = "rapd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# for audio play back
soloud = "1.0.1"
# for logging
log = "0.4.0"
env_logger = "0.9.0"
# for parsing socket requests
serde_json = "1.0.78"
serde = { version = "1.0.136", features = ["derive"] }
