[package]
name = "rapd"
version = "0.1.3"
authors = ["Interfiber <webmaster@interfiber.dev>"]
description = "The Rust Audio Player Daemon"
readme = "../README.md"
homepage = "https://www.interfiber.dev/rapd/"
repository = "https://github.com/Interfiber/rapd"
license = "GPL-3.0"
keywords = ["audio", "cli", "daemon"]
categories = ["command-line-utilities", "multimedia::audio"]
edition = "2021"

[dependencies]
# for audio playback(used to be soloud but it didnt work on nixos)
rodio = "0.15.0"
# for logging
log = "0.4.0"
env_logger = "0.9.0"
# for parsing socket requests/internal database parsing
serde_json = "1.0.78"
serde = { version = "1.0.136", features = ["derive"] }
# for config parsing
toml = "0.5.8"
# other
xdg = "2.4.0" # Get XDG base dir folders
ctrlc = "3.2.1" # Listen for kill events
home = "0.5.3" # Get the home folder
# plugin
notify-rust = { version = "4", optional = true } # send notifications
discord-rich-presence = { version = "0.1.8", optional = true } # set discord rich presence

# Features
[features]
plugins = []
notifyplugin = ["plugins", "notify-rust"]
discordplugin = ["plugins", "discord-rich-presence"]
